# surrealdb-http-client-rs

./: Cargo.toml  README.md
src/: client.rs  lib.rs  response.rs
