[package]
name = "surrealdb-http-client-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper-rustls = { version = "0.23", features = ["http2"] }
hyper = { version = "0.14", features = ["client", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
base64 = "0.20"

[dev-dependencies]
tokio = { version = "1.23", features = ["rt", "macros"] }
